fix some issues in nav edit
- broken links
- table headers mismatch due to Level was not showing

--- a/tendenci/themes/t7-base/static/css/admin/navitem-inline.css
+++ b/tendenci/themes/t7-base/static/css/admin/navitem-inline.css
@@ -10,12 +10,12 @@
 }
 
 .levelLeft {
-	background-image: url('/static/images/arrow-left.jpg');
+	background-image: url('../../images/arrow-left.jpg');
 }
 
 .levelRight {
 	margin-left: 10px;
-	background-image: url('/static/images/arrow-right.jpg');
+	background-image: url('../../images/arrow-right.jpg');
 }
 
 
